fix(tutorials): vimeo video can become too large on desktop

--- a/express/blocks/tutorials/tutorials.css
+++ b/express/blocks/tutorials/tutorials.css
@@ -110,11 +110,3 @@ main .tutorials-overlay .tutorials-overlay-video iframe {
   width: 100%;
   height: 100%;
 }
-
-@media (min-width: 900px) {
-  main .tutorials-overlay .tutorials-overlay-video.vimeo > iframe,
-  main .tutorials-overlay .tutorials-overlay-video.vimeo {
-    width: 90vh;
-    height: 90vh;
-  }
-}
